# slab-allocator

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: chunk.rs  error.rs  lib.rs  main.rs  memory.rs  slab.rs  tests.rs  writer.rs
